# fit-tracker

./: .dockerignore  .env.example  AI_DEPLOY_PROFILE.md  DEPLOY.md  Dockerfile  README.md  docker-compose.local.yml  docker-compose.yml  hevy_exercises.json  hevy_exercises_p2.json  hevy_exercises_p3.json  hevy_exercises_p4.json  hevy_exercises_p5.json  lousa_minutare_deploy_ops_v_6_compose_first.md  next.config.ts  package-lock.json  package.json  proof-logic.ts  proof-output.txt  proof-payloads.js  verify-sync.ts  walkthrough.md
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/core/: config.py  errors.py
backend/app/db/: session.py
backend/app/insights/: service.py
backend/app/models/: __init__.py  common.py  daily_rollup.py  hevy.py  integration.py  performance.py  user.py  wellness.py
backend/app/repositories/: hevy_repository.py  integration_repository.py  wellness_repository.py
backend/app/schemas/: bjj_sessions.py  common.py  dashboard.py  health_auto_export.py  hevy.py  insights.py  metrics.py  nutrition.py  profile.py  recovery.py  settings.py  weight.py
backend/app/services/: bjj_sessions_service.py  bjj_techniques_service.py  dashboard_service.py  health_auto_export_service.py  hevy_service.py  insights_service.py  metrics_service.py  nutrition_service.py  profile_service.py  recovery_service.py  secret_service.py  settings_service.py  (+1 more)
backend/migrations/: README  env.py
backend/tests/: test_config.py  test_health.py
(+185 files in other folders)
